feat(meta): update readme --no-actions

--- a/curseforge.html
+++ b/curseforge.html
@@ -1,10 +1,10 @@
 <div style="display: flex; flex-direction: column;">
     <br />
     <div style="display: flex; flex-direction: column;">
-        <img style="width: 250px;"
+        <img width="250" height="250"
             src="https://github.com/Jamalam360/assets/blob/main/mods/icons/right_click_harvest.png?raw=true" />
         <p></p>
-        <img style="width: 200px;"
+        <img width="200"
             src="https://camo.githubusercontent.com/9296b230044bb4ef07851ff9baa2d04aeb210baee3467abafff1380fa081f08b/68747470733a2f2f692e696d6775722e636f6d2f4f6c31546366382e706e67" />
     </div>
     <br />
